--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,6 +2,10 @@ body {
   background-color: rgb(250, 250, 250);
 }
 
+h1,h2{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .container {
   display: flex;
   align-items: center;
